--- a/templates/clima.html
+++ b/templates/clima.html
@@ -12,7 +12,7 @@ Clima
 <li>Direccion del viento: {{ datosApi.current_weather.winddirection}}</li>
 <li>Dia: {{ datosApi.current_weather.is_day}}</li>
 <li>Codigo meteorologico: {{ datosApi.current_weather.weathercode}}</li>
-
+<!-- solo es una prueba -->
 
 
 {% endblock %}
