--- a/templates/clima.html
+++ b/templates/clima.html
@@ -13,7 +13,7 @@ Clima
 <li>Dia: {{ datosApi.current_weather.is_day}}</li>
 <li>Codigo meteorologico: {{ datosApi.current_weather.weathercode}}</li>
 <!-- solo es una prueba -->
-
+<!-- es otra pureba -->
 
 {% endblock %}
 
