--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@ Inicio cambiando
 <li><a href='/clima?ciudad=El Cairo'> El Cairo</a></li>    
 
 <!-- esto es una prueba -->
+ <!-- esto es una prueba -->
 
 
 {% endblock %}
