--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,7 @@ Inicio cambiando
 <li><a href='/clima?ciudad=Ciudad de México'> Ciudad de México</a></li>
 <li><a href='/clima?ciudad=El Cairo'> El Cairo</a></li>    
 
-<!-- esto es una prueba -->
-<!-- prueba -->
 
 
-{% endblock %}
+
+{% endblock 
